Incremental changes - Added "List" screen generation functionality

--- a/ScreenWizard/Index.html
+++ b/ScreenWizard/Index.html
@@ -19,8 +19,10 @@
     <script src="Scripts/App/Controllers/TableSelectCtrl.js"></script>
     <script src="Scripts/App/Controllers/FieldSelectCtrl.js"></script>
     <script src="Scripts/App/Controllers/editScreenCtrl.js"></script>
+    <script src="Scripts/App/Controllers/listScreenCtrl.js"></script>
     <script src="Scripts/App/Controllers/ExistingScreenCtrl.js"></script>
     <script src="Scripts/App/Controllers/GeneratedEditScreenCtrl.js"></script>
+    <script src="Scripts/App/Controllers/GeneratedListScreenCtrl.js"></script>
 
 
 
